--- a/reports/lab_book/lab_book.tex
+++ b/reports/lab_book/lab_book.tex
@@ -68,7 +68,12 @@ Note: Demultiplexing did not yield any read for CF4F10.
 The pipeline described in this chapter will map the processed reads to the reference genome and build a catalogue of loci. It will eventually implement additional features such as calculating population statistics. At each step of the pipeline, I will try different combinations of parameters and choose the one yielding the best results. 
 
 \section{Mapping}
-Since the reference genome of \textit{Lysiphlebus fabarum} was recently released, I will first map the sequencing reads to the reference, using BWA, but I may also want to use bowtie to compare the results, eventually.
+Since the reference genome of \textit{Lysiphlebus fabarum} was recently released, I will first map the sequencing reads to the reference, using BWA, but I may also want to use bowtie to compare the results, eventually. At the moment, a draft reference genome is available, here are some summary statistics of it:
+
+\vspace{10px}
+\csvautobooktabular[respect underscore=true]{ref_genome_stats.csv}
+\vspace{10px}
+
 \subsection{BWA}
 
 BWA provides 3 different algorithms: MEM, backtrack (aln) and SW. MEM is normally the better for Illumina reads longer than 70bp, therefore I will be using this one here. Backtrack is preferred for short reads and SW with frequent gaps.
@@ -297,7 +302,7 @@ populations & IndProp:0.75, MinDep:5(25)*, MaxHet:0.9\\
 
 \FloatBarrier
 
-\section{Excluding haploids}
+\chapter{Excluding haploids}
 
 I used the F statistics (coefficient of inbreeding) given by the STACKS populations module to measure homozygosity levels in each individual. The F statistics used were generated with more stringent parameters (min depth: 25) to call ploidy more confidently.
 
@@ -311,8 +316,49 @@ First, I calculated the Mean $\mu$ and standard deviation $\sigma$ of the inbree
 
 Update: 08.06.2017
 
-I tried different thresholds for excluding haploids. The thresholds were computed according to these rules:
-1: All thresholds follow the formula $\mu + \tau(N\sigma)$ with $1 \leq N \leq 4$
+I tried 12 different thresholds for excluding haploids. The thresholds were computed according to these rules:
+\begin{itemize}
+\item 1: All thresholds follow the formula $\mu + \tau(N\sigma)$ with $1 \leq N \leq 4$
+\item 2:  $1 \leq \mu \leq 4$
+\item 3: $\tau$ is a function for transforming the inbreeding coefficient values. Either $\tau(F) = F^2$ or $\tau(F) = \sqrt{F}$
+\end{itemize}
+As shown above, in this report I will use the threshold named "m2" which corresponds to  $F > \mu + 2\sigma $.
+Figure \ref{haplodiplo} shows a plot showing the separation of haploid and diploids using this threshold.
+
+\begin{figure}[h]
+	\begin{center}
+		\hspace*{-1.5in}
+		\includegraphics[width=1.55\textwidth]{m2}
+		
+		\caption{Inbreeding coefficient (F). Different colors represent the different types of individuals, as shown in the legend. Each plot is a family, each bar is an individual. Horizontal black bars show the mean inbreeding coefficient of daughters within the family $+/-$ the standard deviation (vertical black line). In theory, mothers should have the lowest inbreeding coefficient of their family (highest heterozygosity)}
+		\label{haplodiplo}
+	\end{center}
+\end{figure}
+
+\FloatBarrier
+
+After separating haploids from diploids, I performed exploratory analyses prior to association mapping. The goal of these is to assess the homozygosity rate of SNPs in diploid males and females and how many seem to fit the CSD pattern. As shown in Figure \ref{SNPs_explo5} and \ref{SNPs_explo25}, there is no single SNPs thatis heterozygous in all females and homozygous in all diploid males. That can imply that the species has ml-CSD and there is no single locus that always fit the CSD pattern, or the restriction enzyme used in the RAD-seq protocol (ecoR1) did not cut in the CSD locus directly. It is very likely a combination of both explanations. It is also worth mentioning that, besides the number of SNPs, it makes little difference whether I use permissive (Figure \ref{SNPs_explo5}) or stringent (Figure \ref{SNPs_explo25}) parameters. The only notable change is that including more SNPs results in higher homozygosity for both sexes.
+
+In this analysis, I excluded all consensus loci (where all individuals had the same allele) and did not consider SNPs with more than 2 genotypes in a single individuals in the heterozygosity calculation (counted as missing values), as they are likely due to contaminations.
+
+\begin{figure}[h]
+	\begin{center}
+		\includegraphics[width=0.8\textwidth]{d5assoc_explo/m2}
+		\caption{Homozygosity of female and diploid male SNPs where depth $\geq 5$ (permissive parameters). Each point on the scatterplot is a SNP, and its coordinate are the proportion of females (x) and males (y) in which it is homozygous. Histograms allow to visualize the distribution of homozygosity for SNPs of each sex. The color code shows how SNPs fit the CSD pattern with lighter points being closer to it (i.e. more homozygous in males and heterozygous in females). Summary statistics on the top right show the threshold used, the number of haploid males excluded (M1N) as well as the number of diploid males (M2N), females (F) and SNPs included.}
+		\label{SNPs_explo5}
+	\end{center}
+\end{figure}
+
+\begin{figure}[h]
+	\begin{center}
+		\includegraphics[width=0.8\textwidth]{d25assoc_explo/m2}
+		\caption{Homozygosity of female and diploid male SNPs $\geq 25$ (stringent parameters). Each point on the scatterplot is a SNP, and its coordinate are the proportion of females (x) and males (y) in which it is homozygous. Histograms allow to visualize the distribution of homozygosity for SNPs of each sex. The color code shows how SNPs fit the CSD pattern with lighter points being closer to it (i.e. more homozygous in males and heterozygous in females). Summary statistics on the top right show the threshold used, the number of haploid males excluded (M1N) as well as the number of diploid males (M2N), females (F) and SNPs included.}
+		\label{SNPs_explo25}
+	\end{center}
+\end{figure}
+
+
+\FloatBarrier
 
 \section{TO DO}
 \begin{itemize}
